--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
+
+   
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <a href="sales.html">Sales</a>
-</body>
+  <head>
+    <title>Salmon</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/stlye.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <h1><a href=index.html>Salmon Cookies</a></h1>
+      <img src="/images/salmon.png" alt="a salmon">
+      <nav>
+        <ul>
+          <li><a href="sales.html">Sales</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          
+        </ul>
+      </nav>
+    </header>
+    
+  </body>
 </html>
 
